// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="sc-bdvvaa gVLkGS"
>
  <h1>
    Foo
  </h1>
</div>
`;

exports[`renders a table 1`] = `
<div
  className="sc-bdvvaa gVLkGS"
>
  <table>
    <thead>
      <tr>
        <th>
          foo
        </th>
        <th>
          bar
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          123
        </td>
        <td>
          456
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders an image 1`] = `
<div
  className="sc-bdvvaa gVLkGS"
>
  <p>
    <img
      alt="foo"
      onClick={[Function]}
      src="http://bar/baz.png"
    />
  </p>
</div>
`;
